--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@mui/x-data-grid": "^8.3.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
