--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sass": "^1.88.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
