--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next": "^25.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.3",
     "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
@@ -33,6 +34,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-dropzone": "^4.2.2",
     "@types/react-i18next": "^8.1.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
