--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
-    "@mui/base": "^5.0.0-beta.70",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.3.0",
-    "@types/react-router-dom": "^5.3.3",
+    "@base-ui-components/react": "1.0.0-beta.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
