--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.3",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.3.0",
-    "@base-ui-components/react": "1.0.0-beta.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "i18next": "^25.1.2",
@@ -32,6 +35,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.1.2",
     "@types/react-dropzone": "^4.2.2",
     "@types/react-i18next": "^8.1.0",
